# Breast-Cancer-Wisconsin

./: .gitignore  00_Privacy_Preserving_Federated_Learning_Simulation.ipynb  README.md  requirements.txt
config/: config.yaml  mlp_architecture.yaml  server_config.yaml
lunartech/: pyproject.toml
lunartech/lunartech/: __init__.py  client_app.py  server_app.py  task.py
models/: centralized_best.joblib  fed_nodp_final.pt
notebooks/: assignment4_federated_dp.ipynb
src/: breast_cancer_mlp.py  flndp_client.py  flndp_model.py  flndp_server.py  mlp_no_dp.py
